--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,16 @@
 
     <string name="fragment_loading_title">Loading</string>
 
+    <!-- region Book selection -->
+
+    <string name="select_book_dummy_book_dialog_title">@string/fragment_select_book_title</string>
+
+    <string name="select_book_dummy_book_dialog_selected_book">The book you selected</string>
+
+    <string name="select_book_dummy_book_dialog_message">%1$s is not a real book and is only included for testing purposes. Please select a valid book to continue.</string>
+
+    <!-- endregion Book selection -->
+
     <!-- region Loading -->
 
     <string name="loading_step_indeterminate">Step %1$d: %2$s</string>
