--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,11 +10,11 @@
 
     <!-- region Book selection -->
 
-    <string name="select_book_dummy_book_dialog_title">@string/fragment_select_book_title</string>
+    <string name="select_book_locked_dialog_title">@string/fragment_select_book_title</string>
 
-    <string name="select_book_dummy_book_dialog_selected_book">The book you selected</string>
+    <string name="select_book_locked_dialog_selected_book">The book you selected</string>
 
-    <string name="select_book_dummy_book_dialog_message">%1$s is not a real book and is only included for testing purposes. Please select a valid book to continue.</string>
+    <string name="select_book_locked_dialog_message">%1$s is currently locked. Please select another book.</string>
 
     <!-- endregion Book selection -->
 
